--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <script src="/js/topojson.js"></script>
 <script src="/js/modernizr.js"></script>
 <script src="/js/d3plus.js"></script>
+<body>
+Test!
+</body>
 
 <div id="viz"></div>
 
