--- a/index.html
+++ b/index.html
@@ -1,48 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <meta charset="utf-8">
-<link href="/css/d3plus.css" media="screen" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/js/d3.js"></script>
-<script src="/js/d3.geo.tile.js"></script>
-<script src="/js/topojson.js"></script>
-<script src="/js/modernizr.js"></script>
-<script src="/js/d3plus.js"></script>
+<style>
+
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
+}
+
+</style>
 <body>
-Test!
-</body>
-
-<div id="viz"></div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
 
-/*
-  The following is all boiler plate code to get you started, from the
-  d3plus wiki. You'll probably want to replace this once you get going
-  on some more in-depth examples.
-*/
+var width = 960,
+    height = 500;
 
-// our data!
-data = [
-  {"value":100, "name":"alpha"},
-  {"value":70, "name":"beta"},
-  {"value":40, "name":"gamma"},
-  {"value":15, "name":"delta"},
-  {"value":5, "name":"epsilon"},
-  {"value":1, "name":"zeta"}
-]
+var color = d3.scale.category20();
 
-// instantiate d3plus
-var visualization = d3plus.viz()
+var force = d3.layout.force()
+    .charge(-120)
+    .linkDistance(30)
+    .size([width, height]);
 
-visualization
-  .type("tree_map")   // we're building a tree map
-  .id("name")         // key for which our data is unique on
-  .text("name")       // text to appear inside block
-  .value("value")     // sizing of blocks
-  .depth(0)           // set the current depth
+var svg = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height", height);
 
-// call visualization on our container element (where it will live)
-d3.select("#viz")
-  .datum(data)
-  .call(visualization)
+d3.json("miserables.json", function(error, graph) {
+  if (error) throw error;
+
+  force
+      .nodes(graph.nodes)
+      .links(graph.links)
+      .start();
+
+  var link = svg.selectAll(".link")
+      .data(graph.links)
+    .enter().append("line")
+      .attr("class", "link")
+      .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+
+  var node = svg.selectAll(".node")
+      .data(graph.nodes)
+    .enter().append("circle")
+      .attr("class", "node")
+      .attr("r", 5)
+      .style("fill", function(d) { return color(d.group); })
+      .call(force.drag);
+
+  node.append("title")
+      .text(function(d) { return d.name; });
+
+  force.on("tick", function() {
+    link.attr("x1", function(d) { return d.source.x; })
+        .attr("y1", function(d) { return d.source.y; })
+        .attr("x2", function(d) { return d.target.x; })
+        .attr("y2", function(d) { return d.target.y; });
+
+    node.attr("cx", function(d) { return d.x; })
+        .attr("cy", function(d) { return d.y; });
+  });
+});
 
 </script>
