--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
 </style>
 <body>
+University of Poppleton: Search related institutions
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
 
-var width = 960,
-    height = 500;
+var width = 500,
+    height = 300;
 
 var color = d3.scale.category20();
 
