--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ var div = d3.select("body").append("div")
     .style("left", margin.left + "px")
     .style("top", margin.top + "px");
 
-d3.json("treemap2.json", function(error, root) {
+d3.json("treemap.json", function(error, root) {
   if (error) throw error;
 
   var node = div.datum(root).selectAll(".node")
