--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ var div = d3.select("body").append("div")
     .style("left", margin.left + "px")
     .style("top", margin.top + "px");
     
-\\ Get the data 
+// Get the data 
 
 d3.json("treemap.json", function(error, root) {
   if (error) throw error;
