--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="./jquery.min.js"></script>
+<script src="/jquery-2.1.4.min.js"></script>
 <script src="./scripts.js"></script>
 <style type="text/css">
 body{font-family: Arial, sans-serif;font-size:10px;}
