--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<script src="/jquery-2.1.4.min.js"></script>
-<script src="./scripts.js"></script>
+<script src="jquery-2.1.4.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <style type="text/css">
 body{font-family: Arial, sans-serif;font-size:10px;}
 .axis path,.axis line {fill: none;stroke:#b6b6b6;shape-rendering: crispEdges;}
