--- a/Subjects/index.html
+++ b/Subjects/index.html
@@ -59,13 +59,13 @@ var svg = d3.select("body").append("svg")
 d3.csv("Data.csv", function(error, data) {
   if (error) throw error;
 
-  var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "State"; });
+  var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "University"; });
 
   data.forEach(function(d) {
     d.ages = ageNames.map(function(name) { return {name: name, value: +d[name]}; });
   });
 
-  x0.domain(data.map(function(d) { return d.State; }));
+  x0.domain(data.map(function(d) { return d.University; }));
   x1.domain(ageNames).rangeRoundBands([0, x0.rangeBand()]);
   y.domain([0, d3.max(data, function(d) { return d3.max(d.ages, function(d) { return d.value; }); })]);
 
@@ -84,13 +84,13 @@ d3.csv("Data.csv", function(error, data) {
       .style("text-anchor", "end")
       .text("Score");
 
-  var state = svg.selectAll(".University")
+  var University = svg.selectAll(".University")
       .data(data)
     .enter().append("g")
       .attr("class", "University")
-      .attr("transform", function(d) { return "translate(" + x0(d.State) + ",0)"; });
+      .attr("transform", function(d) { return "translate(" + x0(d.University) + ",0)"; });
 
-  state.selectAll("rect")
+  University.selectAll("rect")
       .data(function(d) { return d.ages; })
     .enter().append("rect")
       .attr("width", x1.rangeBand())
