--- a/Subjects/index.html
+++ b/Subjects/index.html
@@ -56,7 +56,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("Data.csv", function(error, data) {
+d3.csv("Data2.csv", function(error, data) {
   if (error) throw error;
 
   var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "University"; });
