--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -33,15 +33,18 @@ var start_year = 2003,
 
 var c = d3.scale.category20c();
 
-var x = d3.scale.linear()
-	.range([0, width]);
+//var x = d3.scale.linear()
+//	.range([0, width]);
 
-var xAxis = d3.svg.axis()
-	.scale(x)
-	.orient("top");
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+    
+// var xAxis = d3.svg.axis()
+//	.scale(x)
+//	.orient("top");
 
-var formatYears = d3.format("0000");
-xAxis.tickFormat(formatYears);
+// var formatYears = d3.format("0000");
+// xAxis.tickFormat(formatYears);
 
 var svg = d3.select("body").append("svg")
 	.attr("width", width + margin.left + margin.right)
@@ -54,7 +57,8 @@ var svg = d3.select("body").append("svg")
 // var dataset = [ [2001, 5], [2005, 15], [2006, 2], [2010, 20], [2012, 25] ];
 
 d3.json("subjects2.json", function(data) {
-	x.domain([start_year, end_year]);
+//	x.domain([start_year, end_year]);
+    x.domain(data.map(function(d) { return d.name; }));
 	var xScale = d3.scale.linear()
 		.domain([start_year, end_year])
 		.range([0, width]);
