--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -38,7 +38,7 @@ var c = d3.scale.category20c();
 
 var x = d3.scale.ordinal()
 .domain (["PhD:BA",	"PhD:Staff",	"Teaching Rep",	"Income:Staff",	"Students:Staff",	"Papers:Staff",	"Research Income:Staff",	"Research Rep",	"Citations",	"Ind Income",	"Int Staff",	"Int collaboration",	"Int Students"])
-    .rangeRoundBands([0, width], .1);
+    .rangeBands([0, width]);
     
 var xAxis = d3.svg.axis()
     .scale(x)
