--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -61,8 +61,8 @@ d3.json("subjects2.json", function(data) {
 //	x.domain([start_year, end_year]);
 //    x.domain(data.map(function(d) { return d.name; }));
 	var xScale = d3.scale.linear()
-		.domain(["CalTech",	"Cambridge", "ETH Zurich", "UCL", "Poppleton"])
-		.range([0, width]);
+		.domain([start_year, end_year])
+		.range([20, width-20]);
 
 	svg.append("g")
 		.attr("class", "x axis")
