--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -37,7 +37,7 @@ var c = d3.scale.category20c();
 //	.range([0, width]);
 
 var x = d3.scale.ordinal()
-.domain (["PhD:BA",	"PhD:Staff",	"Teaching Rep",	"Income:Staff",	"Students:Staff",	"Papers:Staff",	"Research Income:Staff",	"Research Rep",	"Citations",	"Ind Income",	"Int Staff",	"Int collaboration",	"Int Students"])
+.domain (["PhD:BA",	"PhD:Staff",	"Teaching Rep",	"Income:Staff",	"Students:Staff",	"Papers:Staff",	"Res Income:Staff",	"Research Rep",	"Citations",	"Ind Income",	"Int Staff",	"Int collaboration",	"Int Students"])
     .rangeBands([0, width]);
     
 var xAxis = d3.svg.axis()
