--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -13,6 +13,7 @@ text.value{font-size:10px;font-weight:bold;}
 </style>
 </head>
 <body>
+<h1>Overview of subject data</h1>
 
 <script type="text/javascript">
 function truncate(str, maxLength, suffix) {
