--- a/BubbleSubjects/index.html
+++ b/BubbleSubjects/index.html
@@ -14,6 +14,12 @@ text.value{font-size:10px;font-weight:bold;}
 </head>
 <body>
 <h1>Overview of subject data</h1>
+    
+<select name="subject-list">
+  <option value="Overall">Overall</option>
+  <option value="Art">Art</option> 
+  <option value="Science">Science</option>
+</select>
 
 <script type="text/javascript">
 function truncate(str, maxLength, suffix) {
