--- a/Subjects/index.html
+++ b/Subjects/index.html
@@ -22,6 +22,16 @@ body {
 }
 
 </style>
+
+<h1>Overview of subject data</h1>
+    
+<select name="subject-list">
+  <option value="Overall">Overall</option>
+  <option value="Art">Art</option> 
+  <option value="Science">Science</option>
+</select>
+
+
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
