--- a/Subjects/index.html
+++ b/Subjects/index.html
@@ -23,7 +23,7 @@ body {
 
 </style>
 
-<h1>Overview of subject data</h1>
+<h1>Overview of subject data: differences</h1>
     
 <select name="subject-list">
   <option value="Overall">Overall</option>
@@ -66,7 +66,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("Data2.csv", function(error, data) {
+d3.csv("Data3.csv", function(error, data) {
   if (error) throw error;
 
   var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "University"; });
