--- a/Subjects/index.html
+++ b/Subjects/index.html
@@ -57,7 +57,7 @@ var xAxis = d3.svg.axis()
 
 var yAxis = d3.svg.axis()
     .scale(y)
-    .orient("left")
+    .orient("right")
     .tickFormat(d3.format(".2s"));
 
 var svg = d3.select("body").append("svg")
