--- a/Chord/index.html
+++ b/Chord/index.html
@@ -69,8 +69,8 @@ var svg = d3.select("body").append("svg")
 svg.append("circle")
 .attr("r", outerRadius);
  
-d3.csv("teams.csv", function(cities) {
-d3.json("matrix.json", function(matrix) {
+d3.csv("countries.csv", function(cities) {
+d3.json("matrix2.json", function(matrix) {
  
 // Compute the chord layout.
 layout.matrix(matrix);
