--- a/U50/index.html
+++ b/U50/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
 
-      <title>THE World University Rankings</title>
+      <title>THE World University Under 50 Rankings</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <font face="Verdana">
-    <h1>THE World University Rankings Data Flow</h1>
+    <h1>THE World University Under 50 Rankings Data Flow</h1>
     </font>
     <div id="chart"></div>
     
