--- a/U50/index.html
+++ b/U50/index.html
@@ -8,6 +8,7 @@
   <body>
     <font face="Verdana">
     <h1>THE World University Under 50 Rankings Data Flow</h1>
+    <body>This <a href="https://en.wikipedia.org/wiki/Sankey_diagram">Sankey diagram</a> describes the data flow for the Times Higher Education 150 Under 50 Ranking. Membership of this ranking is limited to those Unviersities that are under 50 years old.</body>
     </font>
     <div id="chart"></div>
     
