--- a/Chord/index.html
+++ b/Chord/index.html
@@ -1,143 +1,139 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Chord Test</title>
-<style>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Chord Diagram</title>
+    <style type="text/css">
 
-@import url(style.css);
- 
-#circle circle {
-fill: none;
-pointer-events: all;
-}
- 
-.group path {
-fill-opacity: .5;
-}
- 
-path.chord {
-stroke: #000;
-stroke-width: .25px;
-}
- 
-#circle:hover path.fade {
-display: none;
-}
- 
-</style>
- 
-<header>
-<aside>November 14th, 2013</aside>
-<p>Modified from Mike Bostock's <a href="http://bost.ocks.org/mike/uberdata/">Uber Rides by Neighborhood</a></p>
-<p>Modified from eleyine's <a href="http://bl.ocks.org/eleyine/raw/6846156/">Visa requirements in Arab countries</a></p>
-</header>
- 
-<h1>Andrew's Test</h1>
- 
-<aside>Mouseover to focus on travel to and from a particular city.</aside>
- 
-<p>Built with <a href="http://d3js.org/">d3.js</a>.</aside>
- 
-<script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
-<script>
- 
-var width = 720,
-height = 720,
-outerRadius = Math.min(width, height) / 2 - 10,
-innerRadius = outerRadius - 24;
- 
-var formatPercent = d3.format(".1%");
- 
-var arc = d3.svg.arc()
-.innerRadius(innerRadius)
-.outerRadius(outerRadius);
- 
-var layout = d3.layout.chord()
-.padding(.04)
-.sortSubgroups(d3.descending)
-.sortChords(d3.ascending);
- 
-var path = d3.svg.chord()
-.radius(innerRadius);
- 
-var svg = d3.select("body").append("svg")
-.attr("width", width)
-.attr("height", height)
-.append("g")
-.attr("id", "circle")
-.attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
- 
-svg.append("circle")
-.attr("r", outerRadius);
- 
-d3.csv("teams.csv", function(cities) {
-d3.json("matrix.json", function(matrix) {
- 
-// Compute the chord layout.
-layout.matrix(matrix);
- 
-// Add a group per neighborhood.
-var group = svg.selectAll(".group")
-.data(layout.groups)
-.enter().append("g")
-.attr("class", "group")
-.on("mouseover", mouseover);
- 
-// Add a mouseover title.
-// group.append("title").text(function(d, i) {
-// return cities[i].name + ": " + formatPercent(d.value) + " of origins";
-// });
- 
-// Add the group arc.
-var groupPath = group.append("path")
-.attr("id", function(d, i) { return "group" + i; })
-.attr("d", arc)
-.style("fill", function(d, i) { return cities[i].color; });
- 
-// Add a text label.
-var groupText = group.append("text")
-.attr("x", 6)
-.attr("dy", 15);
- 
-groupText.append("textPath")
-.attr("xlink:href", function(d, i) { return "#group" + i; })
-.text(function(d, i) { return cities[i].name; });
- 
-// Remove the labels that don't fit. :(
-groupText.filter(function(d, i) { return groupPath[0][i].getTotalLength() / 2 - 16 < this.getComputedTextLength(); })
-.remove();
- 
-// Add the chords.
-var chord = svg.selectAll(".chord")
-.data(layout.chords)
-.enter().append("path")
-.attr("class", "chord")
-.style("fill", function(d) { return cities[d.source.index].color; })
-.attr("d", path);
- 
-// Add an elaborate mouseover title for each chord.
- chord.append("title").text(function(d) {
- return cities[d.source.index].name
- + " → " + cities[d.target.index].name
- + ": " + formatPercent(d.source.value)
- + "\n" + cities[d.target.index].name
- + " → " + cities[d.source.index].name
- + ": " + formatPercent(d.target.value);
- });
- 
-function mouseover(d, i) {
-chord.classed("fade", function(p) {
-return p.source.index != i
-&& p.target.index != i;
-});
-}
-});
-});
- 
-</script>
- 
- 
-<footer>
-<aside>November 14th, 2013</aside>
-<p>Modified from Mike Bostock's <a href="http://bost.ocks.org/mike/uberdata/">Uber Rides by Neighborhood</a></p>
-<p>Modified from eleyine's <a href="http://bl.ocks.org/eleyine/raw/6846156/">Visa requirements in Arab countries</a></p>
-</footer>
+    path{
+        stroke: black;
+        stroke-width: .25px;
+    }
+    path.fade{
+        display: none;
+    }
+    </style>
+</head>
+<body>
+
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script>
+
+    var margin      = {top: 50, right: 10, bottom: 10, left: 50},
+        width       = 960 - margin.left - margin.right,
+        height      = 600 - margin.top  - margin.bottom,
+        innerRadius = Math.min(width, height) * .35,
+        outerRadius = innerRadius * 1.1;
+
+    var svg = d3.select("body").append("svg")
+        .attr("width",  width  + margin.left + margin.right)
+        .attr("height", height + margin.top  + margin.bottom)
+        .append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")")
+        .append("g")
+        .attr("class", "chordgraph")
+        .attr("transform", "translate(" + width/2 + "," + height/2 + ")");
+
+    d3.csv("votes.csv", function(d){
+
+        /*
+         * IMPORTANT! Specify your first column of data here (see example data)
+         *
+         */
+        var firstColumn = "first_column";
+
+        //store coloumn names
+        var fc = d.map(function(d){ return d[firstColumn]; }),
+            fo = fc.slice(0),
+            maxtrix_size = (Object.keys(d[0]).length - 1) + fc.length,
+            matrix  = [];
+
+        //Create an empty square matrix of zero placeholders, the size of the ata
+        for(var i=0; i < maxtrix_size; i++){
+            matrix.push(new Array(maxtrix_size+1).join('0').split('').map(parseFloat));
+        }
+
+        //go through the data and convert all to numbers except "first_column"
+        for(var i=0; i < d.length; i++){
+
+            var j = d.length;//counter
+
+            for(var prop in d[i]){
+                if(prop != firstColumn){
+                    fc.push(prop);
+                    matrix[i][j] = +d[i][prop];
+                    matrix[j][i] = +d[i][prop];
+                    j++;
+                }
+            }
+        }
+
+        var chord = d3.layout.chord()
+            .padding(.1)
+            .sortSubgroups(d3.descending)
+            .matrix(matrix);
+
+        var chordgroups = chord.groups()
+            .map(function(d){ d.angle = (d.startAngle + d.endAngle)/2; return d; });
+
+        var arc = d3.svg.arc()
+            .innerRadius(innerRadius)
+            .outerRadius(outerRadius);
+
+        var fill = d3.scale.category10();
+
+        svg.selectAll("path")
+            .data(chord.groups)
+            .enter()
+            .append("path")
+            .style("fill", function(d, i){ return (d.index+1) > fo.length ? fill(d.index): "#ccc";})
+            .style("stroke", function(d, i) { return "#000"; })
+            .style("cursor", "pointer")
+            .attr("d", arc)
+            .on("mouseover", function(d, i){
+                chords.classed("fade", function(d){
+                    return d.source.index != i && d.target.index != i;
+                  })
+            });
+
+
+        var chords = svg.append("g")
+            .attr("class", "chord")
+            .selectAll("path")
+            .data(chord.chords)
+            .enter()
+            .append("path")
+            //set the starting node. Change index from zero here.
+            //to start with a target dataset, change d.source.index to d.target.index
+            .classed("fade", function(d,i){return d.source.index == 0 ? false : true;})
+            .attr("d", d3.svg.chord().radius(innerRadius))
+            .style("fill", function(d) { return fill(d.source.subindex); })
+            .style("stroke", function(d){ return "#000";});
+
+        svg.selectAll(".text")
+            .data(chordgroups)
+            .enter()
+            .append("text")
+            .attr("class", "text")
+            .attr("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
+            .attr("transform", function(d){
+
+                //rotate each label around the circle           
+                return "rotate(" + (d.angle * 180 / Math.PI - 90) + ")" + 
+                       "translate(" + (outerRadius + 10) + ")" +
+                       (d.angle > Math.PI ? "rotate(180)" : "");
+
+            })
+            .text(function(d,i){
+                //set the text content
+                return fc[i];
+            })
+            .style({
+                "font-family":"sans-serif",
+                "font-size"  :"12px"
+            })
+
+    });
+    </script>
+</body>
+</html>
