--- a/USRankings/index.html
+++ b/USRankings/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-      <title>THE World University Rankings</title>
+      <title>WSJ THE US College Rankings</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
