--- a/USRankings/index.html
+++ b/USRankings/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <font face="Verdana">
-    <h1>THE World University Rankings Data Flow</h1>
+    <h1>WSJ THE US College Rankings Data Flow</h1>
     </font>
     <div id="chart"></div>
     
