--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -20,31 +20,28 @@
     var dataset = {
 
     nodes: [
-    {name: "Adam"},
-    {name: "Bob"},
-    {name: "Carrie"},
-    {name: "Donovan"},
-    {name: "Edward"},
-    {name: "Felicity"},
-    {name: "George"},
-    {name: "Hannah"},
-    {name: "Iris"},
-    {name: "Jerry"}
+    {name: "Rydon Holdings Ltd"},
+    {name: "Cable Street Regeneration Ltd"},
+    {name: "Merlotrose Ltd"},
+    {name: "Real  Ltd"},
+    {name: "Rydon Group Ltd"},
+    {name: "Real (Hillside) Ltd"},
+    {name: "Rydon Construction Ltd"},
+    {name: "Vivathorn Ltd"},
+    {name: "Ryhurst Ltd"},
+    {name: "Rydon Maintenance Ltd "}
     ],
     edges: [
     {source: 0, target: 1},
     {source: 0, target: 2},
     {source: 0, target: 3},
     {source: 0, target: 4},
-    {source: 1, target: 5},
-    {source: 2, target: 5},
-    {source: 2, target: 5},
-    {source: 3, target: 4},
-    {source: 5, target: 8},
-    {source: 5, target: 9},
-    {source: 6, target: 7},
-    {source: 7, target: 8},
-    {source: 8, target: 9}
+    {source: 3, target: 5},
+    {source: 4, target: 6},
+    {source: 4, target: 7},
+    {source: 4, target: 8},
+    {source: 4, target: 9}
+    
     ]
     };
 
