--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -29,10 +29,10 @@
     {name: "Rydon Construction Ltd"},
     {name: "Vivathorn Ltd"},
     {name: "Ryhurst Ltd"},
-    {name: "Rydon Maintenance Ltd "}
+    {name: "Rydon Maintenance Ltd"}
     ],
     edges: [
-    {source: 0, target: 1},
+    {source: 0, target: 1, name: "TEST" },
     {source: 0, target: 2},
     {source: 0, target: 3},
     {source: 0, target: 4},
