--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -32,7 +32,7 @@
     {name: "Rydon Maintenance Ltd"}
     ],
     edges: [
-    {source: 0, target: 1, name: "TEST" },
+    {source: 0, target: 1, name: "TEST"},
     {source: 0, target: 2},
     {source: 0, target: 3},
     {source: 0, target: 4},
@@ -116,7 +116,7 @@
     edgelabels.append('textPath')
         .attr('xlink:href',function(d,i) {return '#edgepath'+i})
         .style("pointer-events", "none")
-        .text(function(d,i){return 'label '+i});
+        .text(function(d,i){return d.name;});
 
 
     svg.append('defs').append('marker')
