--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -29,19 +29,58 @@
     {name: "Rydon Construction Ltd"},
     {name: "Vivathorn Ltd"},
     {name: "Ryhurst Ltd"},
-    {name: "Rydon Maintenance Ltd"}
+    {name: "Rydon Maintenance Ltd"},
+    {name: "Insite Energy Holdings Ltd"},
+    {name: "Insite Holdco Ltd"},
+    {name: "Insite Energy Holdings Ltd"},
+    {name: "Insite Energy Ltd"},
+    {name: "Ryhurst (IOW) Ltd"},
+    {name: "Ryhurst (Lancashire Step) Ltd"},
+    {name: "Ryhurst (CWP) Ltd"},
+    {name: "Ryhurst (Cambridgeshire) Ltd"},
+    {name: "Ryhurst (Nominee) Ltd"},
+    {name: "Wight Life Partnership LLP"},
+    {name: "Cheshire and Wirral Partnership NHS Foundation Trust"},
+    {name: "Villicare LLP"},
+    {name: "Cambridgeshire Estate Partnership LLP"},
+    {name: "Hitchingbrooke Helalthcare NHS Trust"},
+    {name: "Red Rose Corporate Services LLP"},
+    {name: "Lancashire Care NHS Foundation Trust"},
+    {name: "Red Rose Corporate Services (Whyndyke) LLP"},
+    {name: "Red Rose Corporate Services (Nominee No 2)  LLP"},
+    {name: "Red Rose Corporate Services  (Nominee No 1) LLP"},
+    {name: "Red Rose Corporate Services (Estate Management) LLP"}
     ],
     edges: [
-    {source: 0, target: 1, name: "TEST"},
-    {source: 0, target: 2},
-    {source: 0, target: 3},
-    {source: 0, target: 4},
-    {source: 3, target: 5},
-    {source: 4, target: 6},
-    {source: 4, target: 7},
-    {source: 4, target: 8},
-    {source: 4, target: 9}
-    
+    {source: 0, target: 1, name: "Owns"},
+    {source: 0, target: 2, name: "Owns"},
+    {source: 0, target: 3, name: "Owns"},
+    {source: 0, target: 4, name: "Owns"},
+    {source: 3, target: 5, name: "Owns"},
+    {source: 4, target: 6, name: "Owns"},
+    {source: 4, target: 7, name: "Owns"},
+    {source: 4, target: 8, name: "Owns"},
+    {source: 4, target: 9, name: "Owns"},
+    {source: 9, target: 10, name: "Owns"},
+    {source: 11, target: 10, name: "Owns"},
+    {source: 10, target: 12, name: "Owns"},
+    {source: 8, target: 13, name: "Owns"},
+    {source: 8, target: 14, name: "Owns"},
+    {source: 8, target: 15, name: "Owns"},
+    {source: 8, target: 16, name: "Owns"},
+    {source: 8, target: 17, name: "Owns"},   
+    {source: 17, target: 18, name: "Owns"},
+    {source: 13, target: 18, name: "Owns"},
+    {source: 14, target: 23, name: "Owns"},
+    {source: 24, target: 23, name: "Owns"},
+    {source: 15, target: 20, name: "Owns"},
+    {source: 19, target: 20, name: "Owns"}, 
+    {source: 16, target: 21, name: "Owns"},
+    {source: 22, target: 21, name: "Owns"},
+    {source: 23, target: 25, name: "Owns"},
+    {source: 23, target: 26, name: "Owns"}, 
+    {source: 23, target: 27, name: "Owns"},
+    {source: 23, target: 28, name: "Owns"}
     ]
     };
 
