--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -123,6 +123,8 @@
        .attr({"x":function(d){return d.x;},
               "y":function(d){return d.y;},
               "class":"nodelabel",
+              "font-family":"sans-serif",
+              "font-size":"12px",
               "stroke":"black"})
        .text(function(d){return d.name;});
 
