--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -111,9 +111,8 @@
       .data(dataset.nodes)
       .enter()
       .append("circle")
-      .attr({"r":15})
-
-      .style("fill", function(d) { return colors(d.group); })
+      .attr({"r":10})
+      .style("fill",function(d,i){return colors(i);})
       .call(force.drag)
 
 
