--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -8,6 +8,7 @@
 </style>
 </head>
 <body>
+Data taken from @openownership Beta. All dark blue companies have Mr Robert Bond as the beneficial owner.
 
 <script type="text/javascript">
 
