--- a/Rydon/index.html
+++ b/Rydon/index.html
@@ -149,9 +149,9 @@
         .style("pointer-events", "none")
         .attr({'class':'edgelabel',
                'id':function(d,i){return 'edgelabel'+i},
-               'dx':80,
+               'dx':40,
                'dy':0,
-               'font-size':10,
+               'font-size':8,
                'fill':'#aaa'});
 
     edgelabels.append('textPath')
@@ -210,7 +210,7 @@
 
 </script>
 
-Data taken from @openownership Beta. All dark blue companies have Mr Robert Bond as the beneficial owner.
+<br>Data taken from @openownership Beta. All dark blue companies have Mr Robert Bond as the beneficial owner.
 
 </body>
 </html>
