--- a/Clusters/index.html
+++ b/Clusters/index.html
@@ -50,7 +50,7 @@ d3.json("flare.json", function(error, root) {
   if (error) throw error;
 
   root = d3.hierarchy(root)
-      .sum(function(d) { return d.size; })
+      .sum(function(d) { return math.sqrt(d.size); })
       .sort(function(a, b) { return b.value - a.value; });
 
   var focus = root,
